rules.v4
# Generated by iptables-save v1.8.7 on Tue Aug 24 16:41:06 2021
*nat
:PREROUTING ACCEPT [60:8687]
:INPUT ACCEPT [8:536]
:OUTPUT ACCEPT [14:1282]
:POSTROUTING ACCEPT [14:1282]

-A PREROUTING -s 192.168.110.0/24 -i wlan0 -p tcp -m tcp -m multiport --dports 443 -m set ! --match-set wifiallow src,src -j DNAT --to 192.168.100.254:447
-A PREROUTING -s 192.168.110.0/24 -i wlan0 -p tcp -m tcp -m multiport --dports 80 -m set ! --match-set wifiallow src,src -j DNAT --to 192.168.100.254:83
#MASQUERADE
-A POSTROUTING -s 192.168.110.0/24 -o wan -m set --match-set wifiallow src,src -j MASQUERADE
# Completed on Tue Aug 24 16:41:06 2021
# Generated by iptables-save v1.8.7 on Tue Aug 24 16:41:06 2021
*filter
:INPUT DROP [5:651]
:FORWARD ACCEPT [3148:998913]
:OUTPUT ACCEPT [2338:8621612]

-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

#LAN
-A INPUT -s 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12 -i wlan0 -p tcp -m tcp -m multiport --dports 83,447,5201 -j ACCEPT
-A INPUT -s 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12 -i wlan0 -p udp -m udp -m multiport --dports 53 -j ACCEPT
-A INPUT -s 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12 -i wlan0 -m set ! --match-set wifiallow src,src -j DROP

#FORWARD DROP
-A FORWARD -i wlan0 -m set ! --match-set wifiallow src,src -j DROP
-A FORWARD -i wlan0 -m set --match-set wifiallow src,src -j LOG --log-prefix "THIS IS IPTABLE WLAN0!!!"
# Completed on Tue Aug 24 16:41:06 2021
